--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,85 @@
-<header class="site-header">
-
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
-
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
-
+<header role="banner" class="wrapper--branding">
+  <section class="l-branding">
+    <a href="https://library.princeton.edu" title="Princeton University Library" rel="home" class="site-logo"><img src="https://library.princeton.edu/sites/all/themes/pul_base/logo.png" alt="Home"></a>
+    <h2 class="site-name hidden">Princeton University Library - Illiad</h2>
+  </section>
+  <div class="wrapper wrapper--navigation">
+    <div class="l-region l-region--navigation">
+      <a href="#" class="centered-navigation-menu-button">MENU</a>
+      <nav id="block-system-main-menu" role="navigation" aria-label="main library navigation" class="block block--system block--menu block--system-main-menu centered-navigation-menu pul-processed">
+        <ul class="menu">
+          <li class="first expanded">
+            <a href="/" title="Find library materials">Technical Services</a>
+            <ul class="menu">
+              <li class="first leaf">
+                <a href="https://dss.princeton.edu">Departmental Information</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/research/databases">Divisions</a>
+              </li>
+              <li class="leaf">
+                <a href="https://findingaids.princeton.edu/">ReCAP</a>
+              </li>
+              <li class="leaf">
+                <a href="https://catalog.princeton.edu">Electronic Resources</a>
+              </li>
+              <li class="leaf">
+                <a href="https://libguides.princeton.edu/newspapers">Other Resources</a>
+              </li>
+            </ul>
+          </li>
+          <li class="expanded">
+            <a href="/cataloging" title="View a list of our libraries and collections">Cataloging</a>
+            <ul class="menu">
+              <li class="first leaf">
+                <a href="/cataloging/documentation">Cataloging</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/libraries">Authorities/PCC</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/help/recommend-purchase">Physical Treatment</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">Voyager</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">ReCAP</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">Electronic Resources</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">Metadata</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">OCLC</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">Reference</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">Policies/Procedures</a>
+              </li>
+              <li class="leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">Team/Special</a>
+              </li>
+              <li class="last leaf">
+                <a href="https://library.princeton.edu/collections-and-collection-development">Outside Links</a>
+              </li>
+            </ul>
+          </li>
+          <li class="leaf">
+            <a href="https://library.princeton.edu/services" title="View a list of our library services">Circulation</a>
+          </li>
+          <li class="leaf">
+            <a href="https://library.princeton.edu/about" title="Learn more about the library">Order Division</a>
+          </li>
+          <li class="last leaf">
+            <a href="https://library.princeton.edu/help/contact-us" title="Contact the Library">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
-
 </header>
