--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="post panel-display--pul_base_nine_three">
 
-  <header class="post-header">
+  <div class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  </div>
 
   <article class="post-content">
     {{ content }}
