--- a/_includes/nav__catalog-documentation.html
+++ b/_includes/nav__catalog-documentation.html
@@ -2,8 +2,8 @@
     <ul class="menu">
         <li>Cataloging
         <ul class="sub-menu">
-            <li><a href="{{ "/cataloging/documentation/accompanying-material" | prepend: site.baseurl }}">Accompanying material in non-print formats</a></li>
-            <li><a href="{{ "/cataloging/documentation/art" | prepend: site.baseurl }}">Art</a></li>
+            <li><a href="/tsd/cataloging/documentation/accompanying-material">Accompanying material in non-print formats</a></li>
+            <li><a href="/tsd/cataloging/documentation/art">Art</a></li>
             <li><a href="">Booksets</a></li>
             <li><a href="">Cataloging with Copy</a></li>
             <li><a href="">Classification</a></li>
